# cmd/server/v1/router/project.go
@@ -32,6 +32,7 @@ func (m *ProjectModule) Party() module.WebModule {
 		index.Post("/apply", m.ProjectCtrl.Apply).Name = "申请项目成员"
 		index.Post("/auditList", m.ProjectCtrl.AuditList).Name = "申请加入审批列表"
 		index.Post("/audit", m.ProjectCtrl.Audit).Name = "审批操作"
+		index.Get("/auditUsers", m.ProjectCtrl.AuditUsers).Name = "审批人"
 
 	}
 	return module.NewModule("/projects", handler)
